--- a/index.htm
+++ b/index.htm
@@ -1194,7 +1194,7 @@
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/angebote/zeit-magazin/vomfass/index" class="navigation-link" itemprop="url">
-        <span itemprop="name">Feier dein Geschmack</span>
+        <span itemprop="name"></span>
 </a>                    </li>
                                                     <li>
                         <a href="https://zeitleo.de/weltretter-mission/" class="navigation-link" itemprop="url">
